# blue-backup

./: .gitignore  LICENSE  README.md  blue-backup  blue_backup.py  pyproject.toml  tox.ini
.github/workflows/: run_tests.yml
tests/: blue-local.toml  blue-remote-source.toml  blue-remote-target-and-source.toml  blue-remote-target.toml  blue_backup.py  test_backup.py  test_config.py  test_local.py  test_no_paramiko.py  test_utils.py
