[project]
name = "blue-backup"
dependencies = [
    "tomli; python_version<'3.11'",
    "paramiko",
]
requires-python = ">=3.8"

[tool.mypy]
# blue-backup is read through the tests/blue_backup.py symbolic link.
files = ["tests"]
strict = true
python_version = "3.12"

[tool.ruff]
include = ["blue-backup", "tests/test_*.py"]

[tool.ruff.lint]
select = ["ALL"]

ignore = [
    "COM812",  # Trailing comma missing
    "D105",  # Missing docstring in magic method
    "D107",  # Missing docstring in __init__
    "EM101",  # Exception must not use a string literal, assign to variable first
    "EM102",  # Exception must not use an f-string literal, assign to variable first
    "ERA001",  # Found commented-out code
    "S603",  # `subprocess` call: check for execution of untrusted input
    "TC003",  # Move standard library import `...` into a type-checking block
    "TRY003",  # Avoid specifying long messages outside the exception class
    "TRY301",  # Abstract `raise` to an inner function
]

pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"blue-backup" = [
    "SLF001",  # Private member accessed: `_flavour`
]

"tests/test_*.py" = [
    "INP001",  # File `...` is part of an implicit namespace package. Add an `__init__.py`.
    "PLR2004",  # Magic value used in comparison, consider replacing `0o707` with a constant variable
    "PT012",  # `pytest.raises()` block should contain a single simple statement
    "S101",  # Use of 'assert' detected
]

[tool.pylint.message_control]
disable = [
    # BlueBackup: Too many instance attributes (11/7)
    "too-many-instance-attributes",
    # Module name "blue-backup" doesn't conform to snake_case naming style
    "invalid-name",
    # Import "import paramiko" should be placed at the top of the module
    "wrong-import-position",
    # Access to a protected member _flavour of a client class
    "protected-access",
]
