[build-system]
requires = [ "setuptools >= 77.0.3" ]
build-backend = "setuptools.build_meta"

[project]
name = "blue-backup"
description = "A backup utility based on snapshots and rsync."
authors = [
    { name = "Udi Fuchs", email = "udifuchs@gmail.com" },
]
dependencies = [
    "tomli; python_version<'3.11'",
    "paramiko",
]
requires-python = ">=3.8"
license = "MIT"
license-files = [ "LICENSE" ]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Archiving :: Backup",
]
keywords = [ "backup" ]
readme = "README.md"
dynamic = [ "version" ]

[project.urls]
"Homepage" = "http://github.com/udifuchs/blue-backup"

[project.scripts]
blue-backup = "blue_backup:main"

[tool.setuptools]
py-modules = [ "blue_backup" ]

[tool.setuptools.dynamic]
version = { attr = "blue_backup.VERSION" }

[tool.mypy]
files = [ "blue-backup", "tests" ]
strict = true
python_version = "3.12"

[tool.ruff]
include = [ "blue-backup", "tests/*.py" ]

[tool.ruff.lint]
select = [ "ALL" ]

ignore = [
    "COM812",  # Trailing comma missing
    "D105",  # Missing docstring in magic method
    "D107",  # Missing docstring in __init__
    "EM101",  # Exception must not use a string literal, assign to variable first
    "EM102",  # Exception must not use an f-string literal, assign to variable first
    "S603",  # `subprocess` call: check for execution of untrusted input
    "TC003",  # Move standard library import `...` into a type-checking block
    "TC006",  # Add quotes to type expression in `typing.cast()`
    "TRY003",  # Avoid specifying long messages outside the exception class
    "TRY301",  # Abstract `raise` to an inner function
]

pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"blue-backup" = [
    "SIM105",  # Use `contextlib.suppress(ModuleNotFoundError)` instead of `try`-`except`-`pass`
    "SLF001",  # Private member accessed: `_flavour`
]

"tests/test_*.py" = [
    "INP001",  # File `...` is part of an implicit namespace package. Add an `__init__.py`.
    "PLR2004",  # Magic value used in comparison, consider replacing `0o707` with a constant variable
    "PT012",  # `pytest.raises()` block should contain a single simple statement
    "S101",  # Use of 'assert' detected
]

[tool.pylint.message_control]
disable = [
    # Too few public methods (0/2)
    "too-few-public-methods",
    # BlueBackup: Too many instance attributes (9/7)
    "too-many-instance-attributes",
    # Module name "blue-backup" doesn't conform to snake_case naming style
    "invalid-name",
    # Import "import paramiko" should be placed at the top of the module
    "wrong-import-position",
    # Access to a protected member _flavour of a client class
    "protected-access",
    # Similar lines in 2 files
    "duplicate-code",
]
